# QtTox

./: CMakeLists.txt
include/: chatlist.h  common.h  conference.h  conferencetype.h  connection.h  core.h  files.h  lowlevel.h  messagetype.h  messenger.h  options.h  self.h  toxencrypt.h  toxid.h  toxpk.h  userstatus.h  version.h
src/: chatlist.cpp  conference.cpp  datahelper.h  files.cpp  fillerror.h  messenger.cpp  services.h  toxencrypt.cpp  toxid.cpp  toxpk.cpp
